Cambiar JDBC -> JPA para implementar Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.mvc.view.suffix=.html
 
-#Mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/prevencion_riesgos?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=usuario
 spring.datasource.password=usuario
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 logging.pattern.dateformat=hh:mm
 logging.level.org.springframework=DEBUG
+
