Agregar app properties para Spring Security y MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/prevencion_riesgos?useSSL=fals
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=usuario
 spring.datasource.password=usuario
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+d.app.jwtsecret= ==============Spring===========================
+d.app.exper=86400000
+
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
