--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 spring.mvc.view.suffix=.html
 
-#Mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/prevencion_riesgos?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=usuario
 spring.datasource.password=usuario
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+d.app.jwtsecret= ==============Spring===========================
+d.app.exper=86400000
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 logging.pattern.dateformat=hh:mm
 logging.level.org.springframework=DEBUG
+
